# Api

./: .env  .gitignore  README.md  config.py  input  loging_config.py  main.py  pyproject.toml  requirements.txt  settings.py
api/: __init__.py  handle_error.py  routers.py
api/routers/: news.py  user.py
database/: __init__.py  models.py  operations.py  save_news.py
database/services/: news.py  user.py
dto/: favorite_news.py  news.py  user.py
models/: news.py  user.py
parser/: binance_parser.py  rbc_parser.py  run_parser.py
